# avtootvet-na-otzyv-ya-buisnes

./: README.md  TECH_SPEC_PYTHON.md  alembic.ini  architecture.md  deployment.md  docker-compose.yml  latest-telegram-callback-error.md  project-status-summary.md  pyproject.toml  sammary.md  setup.md
