[project]
name = "reviews-automation-bot"
version = "0.1.0"
description = "Stage 1 backend core for reviews automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.3.0",
    "redis>=6.2.0",
    "rq>=2.6.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["apps*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["apps/backend/tests"]
